--- a/01_lesson/index.html
+++ b/01_lesson/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My First Web Page</title>
+<!--  some css shit for changing the color of the page to black/ dark mode -->
     <style>
         html {
             font-size: 22px;
